--- a/src/app/gallery/gallery.component.css
+++ b/src/app/gallery/gallery.component.css
@@ -2,16 +2,20 @@
 ul
 {
     padding: 0;
-    width: 1200px;
-    margin: 20px auto;
+    width: 100%;
 }
 li
 {
     display: inline;
+    text-align: center;
 }
 .tn
 {
     margin: 6px;
     border: 4px solid #eee;
     box-shadow: #555 1px 1px 8px 1px;
+}
+.b
+{
+    margin-bottom: 10px;
 }
